# FrontISTR

./: .gitignore  CMakeLists.txt  README
examples/dynamic/contact/1DSlide/: rigidslide.cnt  rigidslide.msh
examples/dynamic/expcontact/: 2elem.msh  impact2elem.cnt
examples/dynamic/tworods/: dyna_disp_20.xlsx  dyna_velo_20.xlsx  impact2rods.cnt
fistr1/: CMakeLists.txt
fistr1/src/analysis/dynamic/mode/: fstr_EIG_setMASS.f90
fistr1/src/analysis/dynamic/transit/: dynamic_mat_ass_bc.f90  dynamic_mat_ass_bc_ac.f90  dynamic_mat_ass_bc_vl.f90  dynamic_output.f90  fstr_dynamic_nlexplicit.f90  fstr_solve_dynamic.f90
fistr1/src/analysis/static/: fstr_Update.f90  fstr_ass_load.f90
fistr1/src/common/: CMakeLists.txt  fstr_contact.f90  fstr_setup.f90
fistr1/src/lib/: m_fstr.f90  static_LIB_1d.f90  static_LIB_3d.f90  static_LIB_3dIC.f90  static_LIB_C3D8.f90  static_LIB_Fbar.f90
fistr1/src/lib/contact/: fstr_contact_def.F90
fistr1/tools/: CMakeLists.txt
hecmw1/: CMakeLists.txt  setup_hecmw.sh
hecmw1/src/: Makefile.am
hecmw1/src/common/: CMakeLists.txt
hecmw1/src/operations/: CMakeLists.txt  Makefile.am
hecmw1/src/solver/solver_direct_parallel/: CMakeLists.txt
hecmw1/src/visualizer/: CMakeLists.txt
hecmw1/tools/: CMakeLists.txt
